fix dark mode text color

--- a/src/components/Description/Description.module.css
+++ b/src/components/Description/Description.module.css
@@ -3,4 +3,5 @@
   overflow-x: scroll;
   padding: 0.5rem;
   background-color: silverhalfquarterwhite;
+  color: black;
 }
